# colour-science

./: .gitignore  README.md  pyproject.toml
colour_science/calibration/: auxiliaries.py  intermediate_variables.py  linear_regressions.py  plots.py
colour_science/colour_matching/: __init__.py  metrics.py  optimization.py  plots.py
colour_science/formulation/: __init__.py  formulate.py  ks_mix.py
colour_science/spectral_distribution/: __init__.py  converters.py  saunderson_correction.py  spectral_distribution.py
colour_science/spectrophotometer/: __init__.py  formulas.py  measurements.py  reader.py  spectro_file_schema.py
tests/: conftest.py  test_version.py
tests/calibration/: conftest.py  test_auxiliaries.py  test_intermediate_variables.py  test_linear_regressions.py
tests/formulation/: conftest.py  test_calculate_km_constants.py
tests/integration/: conftest.py  test_intermediate_variables_integration.py  test_linear_regressions_integration.py
tests/spectral_distribution/: conftest.py  test_converters.py  test_saunderson_correction.py  test_spectral_distribution.py
tests/spectrophotometer/: conftest.py  test_formulas.py  test_measurements.py  test_reader.py
tests/spectrophotometer/ressources/: else.csv  formulas.csv  mono_red.csv
